gen type of request and response for invice creation
