# internal/ports/http/types.gen.go
@@ -3,9 +3,30 @@
 // Code generated by github.com/deepmap/oapi-codegen version (devel) DO NOT EDIT.
 package http
 
+import (
+	"time"
+)
+
+// CreateInvoiceResponse defines model for CreateInvoiceResponse.
+type CreateInvoiceResponse struct {
+	AmountBilled float32   `json:"amount_billed"`
+	ClientId     string    `json:"client_id"`
+	DueDate      time.Time `json:"due_date"`
+	IssueDate    time.Time `json:"issue_date"`
+	Status       string    `json:"status"`
+	TotalAmount  float32   `json:"total_amount"`
+}
+
 // SignInResponse defines model for SignInResponse.
 type SignInResponse struct {
 	Token string `json:"token"`
+}
+
+// CreateInvoiceRequest defines model for CreateInvoiceRequest.
+type CreateInvoiceRequest struct {
+	AmountBilled float32   `json:"amount_billed" validate:"required"`
+	ClientId     string    `json:"client_id" validate:"required"`
+	DueDate      time.Time `json:"due_date" validate:"required"`
 }
 
 // SignInRequest defines model for SignInRequest.
@@ -14,11 +35,21 @@ type SignInRequest struct {
 	Password string `json:"password" validate:"required"`
 }
 
+// CreateInvoiceJSONBody defines parameters for CreateInvoice.
+type CreateInvoiceJSONBody struct {
+	AmountBilled float32   `json:"amount_billed" validate:"required"`
+	ClientId     string    `json:"client_id" validate:"required"`
+	DueDate      time.Time `json:"due_date" validate:"required"`
+}
+
 // SignInJSONBody defines parameters for SignIn.
 type SignInJSONBody struct {
 	Email    string `json:"email" validate:"required"`
 	Password string `json:"password" validate:"required"`
 }
+
+// CreateInvoiceJSONRequestBody defines body for CreateInvoice for application/json ContentType.
+type CreateInvoiceJSONRequestBody CreateInvoiceJSONBody
 
 // SignInJSONRequestBody defines body for SignIn for application/json ContentType.
 type SignInJSONRequestBody SignInJSONBody
